...
  const [stepTwoTextIsVisible, setStepTwoTextIsVisible] = useState(false)
  return (
    <>
      <StatusBar barStyle="dark-content" />
      <SafeAreaView>
        <ScrollView
          testID={'mainScrollView'}
          accessibilityLabel={'mainScrollView'}
          contentInsetAdjustmentBehavior="automatic"
          style={styles.scrollView}>
          <Header />
          {global.HermesInternal == null ? null : (
            <View style={styles.engine}>
...
              <Text style={styles.sectionTitle}>See Your Changes</Text>
              <Text style={styles.sectionDescription}>
                <ReloadInstructions />
              </Text>
            </View>
            <View style={styles.sectionContainer}>
            <TouchableOpacity testID={'changeTextAbove'} accessibilityLabel={'changeTextAbove'} onPress={()=> setStepTwoTextIsVisible(true)}>
              <Text>
              Oi, mude o texto acima!
              </Text>
              </TouchableOpacity>

              <Text style={styles.sectionTitle}>Debug</Text>
...
